The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -8,86 +8,86 @@
   </div>  
   <br>  
   <ol id="mozToc"><!--mozToc h1 1 h2 2 h3 3 h4 4 h5 5 h6 6-->
-      <li><a href="#mozTocId368114">Part 1. Welcome</a>
-      <ol>
-      <li><a href="#mozTocId96569">Chapter 1. The introduction</a></li>
-      <li><a href="#mozTocId619515">Chapter 2. A special thanks</a></li>
-      <li><a href="#mozTocId768262">Chapter 3. The license</a></li>
-      <li><a href="#mozTocId349565">Chapter 4. The system requirements</a></li>
-      <li><a href="#mozTocId246473">Chapter 5. The troubleshooting guide</a></li>
-      <li><a href="#mozTocId341518">Chapter 6. The compilers</a></li>
-      <li><a href="#mozTocId250267">Chapter 7. The platform-specific notes</a></li>
-      <li><a href="#mozTocId93850">Chapter 8. The engine namespace</a></li>
-      <li><a href="#mozTocId241696">Chapter 9. The custom data types</a></li></ol></li>
-      <li><a href="#mozTocId736492">Part 2. Basic things</a>
-      <ol>
-      <li><a href="#mozTocId74094">Chapter 1. The coordinate system</a></li>
-      <li><a href="#mozTocId889249">Chapter 2. A game loop</a></li></ol></li>
-      <li><a href="#mozTocId775315">Part 3. Graphics</a>
-      <ol>
-      <li><a href="#mozTocId660835">Chapter 1. The sub-namespace</a></li>
-      <li><a href="#mozTocId307980">Chapter 2. The base graphics subsystem</a></li>
-      <li><a href="#mozTocId648437">Chapter 3. The picture subsystem</a></li>
-      <li><a href="#mozTocId467966">Chapter 4. The animation subsystem</a></li>
-      <li><a href="#mozTocId259576">Chapter 5. The vertex index</a></li>
-      <li><a href="#mozTocId633113">Chapter 6. The background</a></li>
-      <li><a href="#mozTocId308152">Chapter 7. The segment</a></li>
-      <li><a href="#mozTocId284469">Chapter 8. The section</a></li>
-      <li><a href="#mozTocId41503">Chapter 9. The static background</a></li>
-      <li><a href="#mozTocId17101">Chapter 10. The parallax background</a></li>
-      <li><a href="#mozTocId371769">Chapter 11. The base sprite subsystem</a></li>
-      <li><a href="#mozTocId146195">Chapter 13. The animated sprites</a></li>
-      <li><a href="#mozTocId839591">Chapter 13. The ribbons</a></li>
-      <li><a href="#mozTocId292051">Chapter 14. The tier</a></li>
-      <li><a href="#mozTocId799349">Chapter 15. The static sprites</a></li>
-      <li><a href="#mozTocId630896">Chapter 16. The sprite sheet</a></li>
-      <li><a href="#mozTocId168244">Chapter 17. The text</a></li>
-      <li><a href="#mozTocId140968">Chapter 18. Loading an image</a></li>
-      <li><a href="#mozTocId863222">Chapter 19. The camera</a></li></ol></li>
-      <li><a href="#mozTocId778712">Part 4. The transformation</a>
-      <ol>
-      <li><a href="#mozTocId798362">Chapter 1. The sub-namespace</a></li>
-      <li><a href="#mozTocId505409">Chapter 2. The Cartesian coordinates and the screen coordinates</a></li>
-      <li><a href="#mozTocId876509">Chapter 3. The Cartesian coordinates and the isometric coordinates</a></li>
-      <li><a href="#mozTocId909113">Chapter 4. An isometric level</a></li></ol></li>
-      <li><a href="#mozTocId375391">Part 5. The common things</a>
-      <ol>
-      <li><a href="#mozTocId633183">Chapter 1. The sub-namespace</a></li>
-      <li><a href="#mozTocId673941">Chapter 2. The abnormal program termination</a></li>
-      <li><a href="#mozTocId284221">Chapter 3. The timers</a></li>
-      <li><a href="#mozTocId674703">Chapter 4. The collision detector</a></li>
-      <li><a href="#mozTocId560876">Chapter 5. The tilemaps</a></li></ol></li>
-      <li><a href="#mozTocId208248">Part 6. The other important things</a>
-      <ol>
-      <li><a href="#mozTocId605872">Chapter 1. The sub-namespace</a></li>
-      <li><a href="#mozTocId893520">Chapter 2. The memory</a></li>
-      <li><a href="#mozTocId995157">Chapter 3. The audio</a></li></ol></li>
-      <li><a href="#mozTocId1450">Part 7. Misc</a>
-      <ol>
-      <li><a href="#mozTocId109433">Chapter 1. The Filesystem</a></li>
-      <li><a href="#mozTocId260090">Chapter 2. A tool</a></li>
-      <li><a href="#mozTocId256993">Chapter 3. The resource manager</a></li></ol></li>
-      <li><a href="#mozTocId181875">Part 8. The binary files</a>
-      <ol>
-      <li><a href="#mozTocId706443">Chapter 1. The sub-namespace</a></li>
-      <li><a href="#mozTocId168093">Chapter 2. The base binary file subsystem</a></li>
-      <li><a href="#mozTocId648748">Chapter 3. The file reader</a></li>
-      <li><a href="#mozTocId969117">Chapter 4. The file writer</a></li></ol></li>
-      <li><a href="#mozTocId527362">Part 9. The input</a>
-      <ol>
-      <li><a href="#mozTocId524623">Chapter 1. The sub-namespace</a></li>
-      <li><a href="#mozTocId190470">Chapter 2. The keyboard</a></li>
-      <li><a href="#mozTocId599574">Chapter 3. The mouse</a></li>
-      <li><a href="#mozTocId243934">Chapter 4. The gamepad</a></li></ol></li>
-      <li><a href="#mozTocId41774">Part 10. The internal details of the engine subsystems</a>
-      <ol>
-      <li><a href="#mozTocId478780">Chapter 1. A few words for a curious programmer</a></li>
-      <li><a href="#mozTocId570462">Chapter 2. The internal classes</a></li>
-      <li><a href="#mozTocId338619">Chapter 3. The base graphics subsystem</a></li>
-      <li><a href="#mozTocId328098">Chapter 4. The gamepad</a></li>
-      <li><a href="#mozTocId304358">Chapter 5. The input</a></li>
-      <li><a href="#mozTocId539190">Chapter 6. The audio</a></li></ol></li>
-      <li><a href="#mozTocId928107">Version history</a></li></ol>
+<li><a href="#mozTocId368114">Part 1. Welcome</a>
+<ol>
+<li><a href="#mozTocId96569">Chapter 1. The introduction</a></li>
+<li><a href="#mozTocId619515">Chapter 2. A special thanks</a></li>
+<li><a href="#mozTocId768262">Chapter 3. The license</a></li>
+<li><a href="#mozTocId349565">Chapter 4. The system requirements</a></li>
+<li><a href="#mozTocId246473">Chapter 5. The troubleshooting guide</a></li>
+<li><a href="#mozTocId891928">Chapter 6. The supported compilers</a></li>
+<li><a href="#mozTocId250267">Chapter 7. The platform-specific notes</a></li>
+<li><a href="#mozTocId93850">Chapter 8. The engine namespace</a></li>
+<li><a href="#mozTocId241696">Chapter 9. The custom data types</a></li></ol></li>
+<li><a href="#mozTocId736492">Part 2. Basic things</a>
+<ol>
+<li><a href="#mozTocId74094">Chapter 1. The coordinate system</a></li>
+<li><a href="#mozTocId889249">Chapter 2. A game loop</a></li></ol></li>
+<li><a href="#mozTocId775315">Part 3. Graphics</a>
+<ol>
+<li><a href="#mozTocId660835">Chapter 1. The sub-namespace</a></li>
+<li><a href="#mozTocId307980">Chapter 2. The base graphics subsystem</a></li>
+<li><a href="#mozTocId648437">Chapter 3. The picture subsystem</a></li>
+<li><a href="#mozTocId467966">Chapter 4. The animation subsystem</a></li>
+<li><a href="#mozTocId259576">Chapter 5. The vertex index</a></li>
+<li><a href="#mozTocId633113">Chapter 6. The background</a></li>
+<li><a href="#mozTocId308152">Chapter 7. The segment</a></li>
+<li><a href="#mozTocId284469">Chapter 8. The section</a></li>
+<li><a href="#mozTocId41503">Chapter 9. The static background</a></li>
+<li><a href="#mozTocId17101">Chapter 10. The parallax background</a></li>
+<li><a href="#mozTocId371769">Chapter 11. The base sprite subsystem</a></li>
+<li><a href="#mozTocId146195">Chapter 13. The animated sprites</a></li>
+<li><a href="#mozTocId839591">Chapter 13. The ribbons</a></li>
+<li><a href="#mozTocId292051">Chapter 14. The tier</a></li>
+<li><a href="#mozTocId799349">Chapter 15. The static sprites</a></li>
+<li><a href="#mozTocId630896">Chapter 16. The sprite sheet</a></li>
+<li><a href="#mozTocId168244">Chapter 17. The text</a></li>
+<li><a href="#mozTocId140968">Chapter 18. Loading an image</a></li>
+<li><a href="#mozTocId863222">Chapter 19. The camera</a></li></ol></li>
+<li><a href="#mozTocId778712">Part 4. The transformation</a>
+<ol>
+<li><a href="#mozTocId798362">Chapter 1. The sub-namespace</a></li>
+<li><a href="#mozTocId505409">Chapter 2. The Cartesian coordinates and the screen coordinates</a></li>
+<li><a href="#mozTocId876509">Chapter 3. The Cartesian coordinates and the isometric coordinates</a></li>
+<li><a href="#mozTocId909113">Chapter 4. An isometric level</a></li></ol></li>
+<li><a href="#mozTocId375391">Part 5. The common things</a>
+<ol>
+<li><a href="#mozTocId633183">Chapter 1. The sub-namespace</a></li>
+<li><a href="#mozTocId673941">Chapter 2. The abnormal program termination</a></li>
+<li><a href="#mozTocId284221">Chapter 3. The timers</a></li>
+<li><a href="#mozTocId674703">Chapter 4. The collision detector</a></li>
+<li><a href="#mozTocId175283">Chapter 5. Tilemaps</a></li></ol></li>
+<li><a href="#mozTocId208248">Part 6. The other important things</a>
+<ol>
+<li><a href="#mozTocId605872">Chapter 1. The sub-namespace</a></li>
+<li><a href="#mozTocId893520">Chapter 2. The memory</a></li>
+<li><a href="#mozTocId995157">Chapter 3. The audio</a></li></ol></li>
+<li><a href="#mozTocId1450">Part 7. Misc</a>
+<ol>
+<li><a href="#mozTocId109433">Chapter 1. The Filesystem</a></li>
+<li><a href="#mozTocId260090">Chapter 2. A tool</a></li>
+<li><a href="#mozTocId256993">Chapter 3. The resource manager</a></li></ol></li>
+<li><a href="#mozTocId181875">Part 8. The binary files</a>
+<ol>
+<li><a href="#mozTocId706443">Chapter 1. The sub-namespace</a></li>
+<li><a href="#mozTocId168093">Chapter 2. The base binary file subsystem</a></li>
+<li><a href="#mozTocId648748">Chapter 3. The file reader</a></li>
+<li><a href="#mozTocId969117">Chapter 4. The file writer</a></li></ol></li>
+<li><a href="#mozTocId527362">Part 9. The user input</a>
+<ol>
+<li><a href="#mozTocId524623">Chapter 1. The sub-namespace</a></li>
+<li><a href="#mozTocId190470">Chapter 2. Keyboard</a></li>
+<li><a href="#mozTocId599574">Chapter 3. Mouse</a></li>
+<li><a href="#mozTocId243934">Chapter 4. Gamepad</a></li></ol></li>
+<li><a href="#mozTocId41774">Part 10. The internal details of the engine subsystems</a>
+<ol>
+<li><a href="#mozTocId478780">Chapter 1. A few words for a curious programmer</a></li>
+<li><a href="#mozTocId570462">Chapter 2. The internal classes</a></li>
+<li><a href="#mozTocId338619">Chapter 3. The base graphics subsystem</a></li>
+<li><a href="#mozTocId328098">Chapter 4. Gamepad</a></li>
+<li><a href="#mozTocId304358">Chapter 5. The user input</a></li>
+<li><a href="#mozTocId539190">Chapter 6. The audio</a></li></ol></li>
+<li><a href="#mozTocId928107">Version history</a></li></ol>
   <h1><a id="mozTocId368114" class="mozTocH1"></a><big>Part 1. Welcome</big></h1>
   <h2><a id="mozTocId96569" class="mozTocH2"></a><big>Chapter 1. The introduction</big></h2>
   <big><u>The introduction.</u><br>
@@ -205,7 +205,7 @@
   <big>
    You need <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170">Visual C++ Redistributable</a> packages if your game code is compiled under Visual C++.<br>
   </big>
-  <h2><a id="mozTocId341518" class="mozTocH2"></a><big>Chapter 6. The compilers</big></h2>
+  <h2><a id="mozTocId891928" class="mozTocH2"></a><big>Chapter 6. The supported compilers</big></h2>
   <big>
    This engine was successfully tested with these compilers:<br>
   </big>
@@ -1281,7 +1281,7 @@
    <br>
    <i>bool Collision::check_collision(const EUGENEGDK::BOX first_target, const EUGENEGDK::BOX second_target); -</i> Set the targets and check the collision between them.<br>
   </big>
-  <h2><a id="mozTocId560876" class="mozTocH2"></a><big>Chapter 5. The tilemaps</big></h2>
+  <h2><a id="mozTocId175283" class="mozTocH2"></a><big>Chapter 5. Tilemaps</big></h2>
   <big><u>A few words about the tilemaps.</u><br>
    <br>
    The tilemap is a tile matrix. A tile is a small, non-transparent sprite. A tilemap is a very useful thing for the background.<br>
@@ -1459,12 +1459,12 @@
    <br>
    <i>void Output_File::flush(); -</i> Force writing the internal buffer data to the file.<br>
   </big>
-  <h1><a id="mozTocId527362" class="mozTocH1"></a><big>Part 9. The input</big></h1>
+  <h1><a id="mozTocId527362" class="mozTocH1"></a><big>Part 9. The user input</big></h1>
   <h2><a id="mozTocId524623" class="mozTocH2"></a><big>Chapter 1. The sub-namespace</big></h2>
   <big>
    All classes in this section are declared in the <i>Input</i> sub-namespace.<br>
   </big>
-  <h2><a id="mozTocId190470" class="mozTocH2"></a><big>Chapter 2. The keyboard</big></h2>
+  <h2><a id="mozTocId190470" class="mozTocH2"></a><big>Chapter 2. Keyboard</big></h2>
   <big><u>The low-level input.</u><br>
    <br>
    Any keyboard has a built-in chip. It generates a special code when the user presses or releases the key. This code is called a «scan code».
@@ -1735,7 +1735,7 @@
   </table>
   <big><br>
   </big>
-  <h2><a id="mozTocId599574" class="mozTocH2"></a><big>Chapter 3. The mouse</big></h2>
+  <h2><a id="mozTocId599574" class="mozTocH2"></a><big>Chapter 3. Mouse</big></h2>
   <big><u>A few words about mice.</u><br>
    <br>
    A mouse is very useful for interaction with a graphical user interface. But the mouse can also be used in video games.
@@ -1787,7 +1787,7 @@
   </table>
   <big><br>
   </big>
-  <h2><a id="mozTocId243934" class="mozTocH2"></a><big>Chapter 4. The gamepad</big></h2>
+  <h2><a id="mozTocId243934" class="mozTocH2"></a><big>Chapter 4. Gamepad</big></h2>
   <big><u>The best friend of a retro gamer.</u><br>
    <br>
    What is a good choice for a game control device when the user plays an arcade or an old-school video game? A gamepad. This engine provides simple access to it.
@@ -1992,11 +1992,11 @@
    <br>
    All these custom types are declared in the <i>Core</i> sub-namespace.<br>
   </big>
-  <h2><a id="mozTocId328098" class="mozTocH2"></a><big>Chapter 4. The gamepad</big></h2>
+  <h2><a id="mozTocId328098" class="mozTocH2"></a><big>Chapter 4. Gamepad</big></h2>
   <big>
    The gamepad subsystem is working over the <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick Multimedia API</a>.<br>
   </big>
-  <h2><a id="mozTocId304358" class="mozTocH2"></a><big>Chapter 5. The input</big></h2>
+  <h2><a id="mozTocId304358" class="mozTocH2"></a><big>Chapter 5. The user input</big></h2>
   <big><u>The input backend.</u><br>
    <br>
    The input subsystem is the simple thing. It works over the standard Microsoft Windows API.
@@ -2605,6 +2605,7 @@
    10.2.5-10.2.6: The picture subsystem has improved.<br>
    10.2.7: The timer subsystem has improved.<br>
    10.2.8: The picture subsystem has improved.<br>
+   10.2.8.1: The documentation has been updated.<br>
   </big>
 </body>
 </html>
