The image loader has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2606,6 +2606,7 @@
    10.2.7: The timer subsystem has improved.<br>
    10.2.8: The picture subsystem has improved.<br>
    10.2.8.1: The documentation has been updated.<br>
+   10.2.9: The image loader has improved.<br>
   </big>
 </body>
 </html>
